# esi-ui

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
esi_ui/api/: esi_api.py  esi_rest_api.py
esi_ui/content/baremetal_topology/: panel.py  urls.py  views.py
esi_ui/content/baremetal_topology/templates/baremetal_topology/: iframe.html  index.html
esi_ui/content/esi/: dashboard.py  panel.py  urls.py  views.py
esi_ui/content/esi/lessee/baremetal_topology/: panel.py  urls.py  views.py
esi_ui/content/esi/lessee/nodes/: panel.py  urls.py  views.py
esi_ui/content/esi/lessee/offers/: panel.py  urls.py  views.py
esi_ui/content/esi/owner/leases/: panel.py  urls.py  views.py
esi_ui/content/esi/owner/offers/: panel.py  urls.py  views.py
esi_ui/content/esi/templates/esi/: index.html
esi_ui/content/nodes/: panel.py  urls.py  views.py
esi_ui/content/nodes/templates/nodes/: index.html
esi_ui/content/offers/: panel.py  urls.py  views.py
esi_ui/content/offers/templates/offers/: index.html
esi_ui/enabled/: _4000_esi.py  _4010_esi_lessee_panel_group.py  _4020_lessee_nodes_panel.py  _4030_lessee_offers_panel.py  _4040_lessee_network_topology_panel.py  _4100_esi_owner_panel_group.py  _4110_owner_leases.py  _4120_owner_offers.py  _6000_esi_panel_group.py  _6010_project_nodes_panel.py  _6020_project_offers_panel.py  _6030_project_network_topology_panel.py
esi_ui/static/dashboard/esi/: esi.module.js  esi.service.js
esi_ui/static/dashboard/esi/create-leases/: create-leases-modal.service.js  create-leases-model.service.js  (+4 more)
(+127 files in other folders)
